split pipelines into master and dev

--- a/.azure/vega-spring-backend-master.yml
+++ b/.azure/vega-spring-backend-master.yml
@@ -4,7 +4,6 @@
 
 pr:
 - master
-- develop
 
 resources:
 - repo: self
@@ -12,7 +11,7 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: 'a92a9da4-409c-454f-bcf4-1a3f6ba8acd0'
-  imageRepository: 'vegaspringbackend'
+  imageRepository: 'vegaspringbackendmaster'
   containerRegistry: 'seng426group10vega.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/vega-spring-master/Dockerfile'
   tag: '$(Build.BuildId)'
