--- a/.azure/vega-spring-backend-develop.yml
+++ b/.azure/vega-spring-backend-develop.yml
@@ -26,7 +26,7 @@ stages:
   - job: Test
     displayName: Test
     pool:
-      vmImage: $(javaImageName)
+      vmImage: $(vmImageName)
     steps:
     - task: JavaToolInstaller@0
       displayName: Install Java JDK 14
