giving mvnw execution permissions in test

--- a/.azure/vega-spring-backend-develop.yml
+++ b/.azure/vega-spring-backend-develop.yml
@@ -37,7 +37,9 @@ stages:
     - task: CmdLine@2
       displayName: Run mvnw test goal
       inputs:
-        script: ./mvnw test
+        script: |
+          chmod +x ./mvnw
+          ./mvnw test
         workingDirectory: '$(Build.SourcesDirectory)/vega-spring-master'
 - stage: Build
   displayName: Build and push stage
