made dummy test and split build pipeline

--- a/.azure/vega-web-frontend-master.yml
+++ b/.azure/vega-web-frontend-master.yml
@@ -2,9 +2,11 @@
 # Build and push an image to Azure Container Registry
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
+trigger:
+- master
+
 pr:
 - master
-- develop
 
 resources:
 - repo: self
