Add volume definition to docker-compose so the image doesn't have to be rebuilt on every code change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       context: ./vega-web-master
       dockerfile: ./Dockerfile
     image: "venus/theswitch"
+    volumes:
+      - ./vega-web-master:/app
     ports:
       - "3000:3000"
     links:
