--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,22 @@ services:
       - MYSQL_PASSWORD=venus
     ports:
       - 3306:3306
-  backend-api: 
+
+  backend-api:
+    restart: on-failure
     build:
       context: ./vega-spring-master
       dockerfile: ./Dockerfile
     image: "venus/beeple"
     ports:
       - "8080:8080"
+    # environment:
+    #    - "SPRING_PROFILES_ACTIVE=prod"
+    depends_on:
+      - "venus-mysql"
+      - "backend-web"
+      - "frontend"
+
   backend-web:
     build:
       context: ./vega-web-master/server
@@ -25,6 +34,7 @@ services:
     image: "venus/quantum"
     ports:
       - "8000:8000"
+
   frontend:
     build:
       context: ./vega-web-master
