added account creation tests

--- a/tests/uitests/src/test/resources/application.properties
+++ b/tests/uitests/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 
 grid.url=${grid.url}
 
-site.url=${site.url}
+site.url=http://localhost:3000
 
 browser.name=${browser.name}
 browser.version=${browser.version}
